# StructZone

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yaml  entrypoint.sh
benchmark/: Makefile  benchmark.c  benchmark_out  generate_plots.py  run_benchmark.py
benchmark/src/: benchmark.c
docker/: Dockerfile  entrypoint.sh  spec_setup.sh
docker/spec-files/: Makefile.defaults  structzone.cfg
llvm-pass/: Makefile  Sanitizer.cpp  compile_pass.sh
llvm-pass/src/: Sanitizer.cpp  functionTransformer.cpp  functionTransformer.h  redzone.cpp  redzone.h  utils.cpp  utils.h
runtime/: .gdbinit  Makefile
runtime/src/: Runtime.cpp  Runtime.h  RuntimeTest.cpp
scripts/: spec_setup.sh
scripts/spec-files/: base.cfg  structs.bset
src/llvm-pass/: Sanitizer.cpp  compile_pass.sh
test/: Makefile  compile-test.sh  run_tests.py  toy.arr.external_overflow.c  toy.heap.internal_overflow.c  toy.heap.safe.c  toy.internal_overflow.c  toy.nested.internal_overflow.c  toy.nested.safe.c  toy.safe.c
test/src/: toy.arr.external_overflow.c  toy.arr.safe.c  toy.func_ptr.safe.c  toy.funccall.external_overflow.c  toy.funccall.ret.safe.c  toy.funccall_overflow.c  toy.funccall_safe.c  toy.global.internal_overflow.c  toy.heap.arr.external_overflow.c  toy.heap.arr.safe.c  toy.heap.calloc.safe.c  toy.heap.internal_overflow.c  toy.heap.reuse.safe.c  toy.heap.safe.c  toy.internal_overflow.c  toy.libc.stat.c  toy.libc.timezone.c  toy.nested.arr.safe.c  toy.nested.internal_overflow.c  toy.safe.c  (+4 more)
